--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,13 @@ services:
     build: ./
     command: npm run develop
     volumes:
-      - ./:/code
+      - "./:/code/"
     ports:
       - "5000:5000"
-    # command:
-    #   - yarn
-    #   - run
-    #   - develop
+    links:
+      - mongo
+  mongo:
+    container_name: recycleit_mongo
+    image: mongo
+    ports:
+      - "27017:27017"
