--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "develop": "nodemon src/index.js"
+    "develop": "nodemon --legacy-watch src/index.js"
   },
   "repository": "git@github.com:roshanrajeev/recycleit_backend.git",
   "author": "roshanrajeev <roshanrajeev2001@gmail.com>",
@@ -17,6 +17,6 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.5.2"
+    "mongoose": "^6.5.4"
   }
 }
